--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,14 +34,14 @@
 
 				<div class="mt-12 grid gap-8 grid-cols-1 md:grid-cols-2">
 					<div class="bg-gray-50 rounded-lg px-6 pb-8">
-						<h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">First beneft</h3>
+						<h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">First benefit</h3>
 						<p class="mt-5 text-gray-500">
 							You can save time
 						</p>
 					</div>
 
 					<div class="bg-gray-50 rounded-lg px-6 pb-8">
-						<h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Second beneft</h3>
+						<h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Second benefit</h3>
 						<p class="mt-5 text-gray-500">
 							You can save money
 						</p>
@@ -49,14 +49,14 @@
 					<div class="bg-gray-50 rounded-lg px-6 pb-8">
 						<h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">3rd beneft</h3>
 						<p class="mt-5 text-gray-500">
-							You can avoid X
+							You can avoid wasting resources
 						</p>
 					</div>
 
 					<div class="bg-gray-50 rounded-lg px-6 pb-8">
-						<h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">4th beneft</h3>
+						<h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">4th benefit</h3>
 						<p class="mt-5 text-gray-500">
-							You can do Y
+							You can do utilize resources
 						</p>
 					</div>			
 				</div>
